@@ -1,5 +1,6 @@
 TRUNK
   - builds can now be serialized - only one build runs at a time on a server
+  - build requested status now stays on dashboard until a build starts
   - [patch] subversion external support
 ------------------------------------------------------------------------------------------------------------------------
 * 1.2.1
